tests/kyverno-policies/no-ingress/resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-pass
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: web
spec:
  rules:
  - host: web.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
  tls:
  - hosts:
    - web.example.com
    secretName: web-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-fail
  namespace: user-test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: web
spec:
  rules:
  - host: web.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
  tls:
  - hosts:
    - web.example.com
    secretName: web-test
