tests/kyverno-policies/no-ingress/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: no-ingress
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: no-ingress
    rule: user-no-ingress
    resources:
      - test/test-pass
    kind: Ingress
    result: skip
  - policy: no-ingress
    rule: user-no-ingress
    resources:
      - user-test/test-fail
    kind: Ingress
    result: fail
